saved DC components (unmodified)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
-        "jpeglib.h": "c"
+        "jpeglib.h": "c",
+        "jerror.h": "c",
+        "stb_image_write.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
